Added a change (comment) to fulfill assignment requirements

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- This is a small change that I am making to fulfill assignment requirements -->
     <title>Cody Uhi's Portfolio</title>
 </head>
 
@@ -14,9 +15,11 @@
     <p>I've worked on a few projects, but here are the three that I am most proud of:</p>
     <ol>
         <li><a href="http://codyuhi.github.io/">My Personal Website</a> (hosted on Github pages)</li>
-        <li><a href="https://github.com/codyuhi/Pokedex2">A Pokedex mobile app</a> which uses Google Cloud Vision AI to pull up Pokedex entries by pointing the phone
+        <li><a href="https://github.com/codyuhi/Pokedex2">A Pokedex mobile app</a> which uses Google Cloud Vision AI to
+            pull up Pokedex entries by pointing the phone
             camera at the pokemon name!</li>
-        <li><a href="https://theeurekatrail.com/">The Eureka Trails Flutter app</a>, which is a mobile app that gamifies fitness tracking</li>
+        <li><a href="https://theeurekatrail.com/">The Eureka Trails Flutter app</a>, which is a mobile app that gamifies
+            fitness tracking</li>
     </ol>
     <hr>
     <h2>Experience</h2>
