Implement flex content and start Project coding

--- a/html-app/index.html
+++ b/html-app/index.html
@@ -11,7 +11,254 @@
 </head>
 
 <body>
-
+    <div id="content-container" class="flex-column">
+        <div id="content" class="flex-column">
+            <div id="intro-container" class=" flex-column section center">
+                <div id="intro" class="flex-column center">
+                    <h1>Cody Uhi</h1>
+                    <h3>Site Reliability Engineer, Full-Stack Software Engineer</h3>
+                    <h3>I like fun things</h3>
+                </div>
+            </div>
+            <div id="projects-container" class="flex-column section center">
+                <h2>Projects</h2>
+                <div id="projects" class="flex-row wrap center">
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Online Market</h4>
+                            <p class="project-description">A full-stack mobile application for buyers and sellers in an
+                                online market to support sales</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">NodeJS</li>
+                                <li class="tech-item">Express</li>
+                                <li class="tech-item">Java</li>
+                                <li class="tech-item">Android</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Family Map</h4>
+                            <p class="project-description">A full-stack mobile application that allows family history
+                                enthusiasts to track significant family history events on Google Maps</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">Java</li>
+                                <li class="tech-item">SQLite</li>
+                                <li class="tech-item">Android</li>
+                                <li class="tech-item">Google Maps API</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Blog</h4>
+                            <p class="project-description">A full-stack web application that hosts a personal blog</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">NodeJS</li>
+                                <li class="tech-item">Express</li>
+                                <li class="tech-item">MongoDB</li>
+                                <li class="tech-item">VueJS</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Network Application</h4>
+                            <p class="project-description">A full-stack web application that helps professionals track
+                                job applications and recruiter interactions</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">NodeJS</li>
+                                <li class="tech-item">Express</li>
+                                <li class="tech-item">PostgreSQL</li>
+                                <li class="tech-item">Docker</li>
+                                <li class="tech-item">VueJS</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Game Deals</h4>
+                            <p class="project-description">A frontend application that helps gamers find the cheapest
+                                deals on video games across multiple online vendors</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">VueJS</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Grocery Store</h4>
+                            <p class="project-description">A full-stack web application for buyers in an online market
+                                to purchase products</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">NodeJS</li>
+                                <li class="tech-item">Express</li>
+                                <li class="tech-item">MongoDB</li>
+                                <li class="tech-item">VueJS</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Quality of Life</h4>
+                            <p class="project-description">A frontend-only web application that allows users to review
+                                quality-of-life statistics for cities all over the world</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">HTML</li>
+                                <li class="tech-item">CSS</li>
+                                <li class="tech-item">JavaScript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Weather</h4>
+                            <p class="project-description">A frontend-only web application that allows users to see the
+                                weather in cities all over the world</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">HTML</li>
+                                <li class="tech-item">CSS</li>
+                                <li class="tech-item">JavaScript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Desk Setup</h4>
+                            <p class="project-description">A frontend-only website that showcases the work of an
+                                interior designer</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">HTML</li>
+                                <li class="tech-item">CSS</li>
+                                <li class="tech-item">JavaScript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Tongan Tourism</h4>
+                            <p class="project-description">A frontend-only website that reimagines the tourism website
+                                for the Polynesian country of Tonga</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">HTML</li>
+                                <li class="tech-item">CSS</li>
+                                <li class="tech-item">JavaScript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Uhi Photo Spot</h4>
+                            <p class="project-description">A frontend-only website that showcases a photography
+                                portfolio</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">HTML</li>
+                                <li class="tech-item">CSS</li>
+                                <li class="tech-item">JavaScript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Pokedex</h4>
+                            <p class="project-description">A frontend-only mobile application that allows players of the
+                                Pokemon franchise to view Pokemon stats and track capture progress</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">Java</li>
+                                <li class="tech-item">Android</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Detect Deepfake</h4>
+                            <p class="project-description">A machine-learning model that determines whether a given
+                                image is a deepfake image or an authentic image (97.5% Accuracy)</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">Python3</li>
+                                <li class="tech-item">Tensorflow</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Dungeons & Dragons</h4>
+                            <p class="project-description">A frontend-only mobile application that allows Dungeons &
+                                Dragons players to retrieve random dice roll numbers</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">Java</li>
+                                <li class="tech-item">Android</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Whereabouts</h4>
+                            <p class="project-description">A frontend-only mobile application that allows users to scan
+                                text with their mobile device's camera and automatically look up locations/URLs in a map
+                                application or browser</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">Java</li>
+                                <li class="tech-item">Android</li>
+                                <li class="tech-item">Google Vision API</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Eureka Trails</h4>
+                            <p class="project-description">A full-stack mobile application that gamifies walking
+                                distance to incentivize physical activity (Sponsored by BYU)</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">Java</li>
+                                <li class="tech-item">MySQL</li>
+                                <li class="tech-item">Firebase</li>
+                                <li class="tech-item">Flutter</li>
+                                <li class="tech-item">Android</li>
+                                <li class="tech-item">iOS</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-cell-container flex-row flex-wrap">
+                        <div class="project-cell">
+                            <h4 class="project-name">Kashti 2.0</h4>
+                            <p class="project-description">An event-driven scripting platform dashboard for Kubernetes
+                                (Sponsored by Microsoft)</p>
+                            <ul class="tech-list">
+                                <li class="tech-item">GoLang</li>
+                                <li class="tech-item">TypeScript</li>
+                                <li class="tech-item">AngularJS</li>
+                                <li class="tech-item">OpenID Connect</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="experience-container" class="flex-column section center">
+                <div id="experience" class="flex-column">
+                    <h3>Experience</h3>
+                </div>
+                <div id="education" class="flex-column">
+                    <h3>Education</h3>
+                </div>
+            </div>
+            <div id="about-container" class="flex-column section center">
+                <div id="about" class="flex-column">
+                    <h2>About Me</h2>
+                </div>
+            </div>
+            <div id="contact-container" class="flex-column section center">
+                <div id="contact" class="flex-column">
+                    <h2>Contact</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer-container" class="flex-column section center">
+        <div id="footer" class="flex-column">
+            <h2>Footer</h2>
+        </div>
+    </div>
 </body>
 
 </html>
