--- a/html-app/index.html
+++ b/html-app/index.html
@@ -237,9 +237,100 @@
             <div id="experience-container" class="flex-column section center">
                 <div id="experience" class="flex-column">
                     <h3>Experience</h3>
+                    <p><a href="#">Resume</a> <a href="#">Download</a></p>
+                    <h4>Timeline</h4>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">February 2021 - Present</h5>
+                        <p class="experience-title">Site Reliability Engineer</p>
+                        <p class="experience-org">Vivint Smart Home</p>
+                        <p class="experience-location">Lehi, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">September 2017 - Present</h5>
+                        <p class="experience-title">25U Signal Support System Specialist</p>
+                        <p class="experience-org">US Army Reserves</p>
+                        <p class="experience-location">West Valley City, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">September 2020 - February 2021</h5>
+                        <p class="experience-title">Software QA Engineer</p>
+                        <p class="experience-org">Vivint Smart Home</p>
+                        <p class="experience-location">Lehi, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">April 2020 - August 2020</h5>
+                        <p class="experience-title">Software Engineer Intern</p>
+                        <p class="experience-org">Instructure</p>
+                        <p class="experience-location">Salt Lake City, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">January 2020 - September 2020</h5>
+                        <p class="experience-title">Sr. Lead - Technology Productivity</p>
+                        <p class="experience-org">Vivint Smart Home</p>
+                        <p class="experience-location">Lehi, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">November 2019 - April 2020</h5>
+                        <p class="experience-title">Crisis Informatics Lab Research Assistant</p>
+                        <p class="experience-org">Brigham Young University Crisis Informatics Lab</p>
+                        <p class="experience-location">Provo, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">February 2019 - January 2020</h5>
+                        <p class="experience-title">Network Support Specialist</p>
+                        <p class="experience-org">Vivint Smart Home</p>
+                        <p class="experience-location">Lehi, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">June 2019 - August 2019</h5>
+                        <p class="experience-title">Cyber Operations Officer Intern</p>
+                        <p class="experience-org">US Government</p>
+                        <p class="experience-location">Washington DC</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">October 2016 - February 2019</h5>
+                        <p class="experience-title">Field Tech Support Specialist</p>
+                        <p class="experience-org">Vivint Smart Home</p>
+                        <p class="experience-location">Provo, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">August 2015 - October 2017</h5>
+                        <p class="experience-title">Language Training Specialist</p>
+                        <p class="experience-org">Missionary Training Center</p>
+                        <p class="experience-location">Provo, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">April 2016 - October 2016</h5>
+                        <p class="experience-title">Tech Support Specialist</p>
+                        <p class="experience-org">Alder & Alarm Co.</p>
+                        <p class="experience-location">Orem, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">April 2016 - July 2016</h5>
+                        <p class="experience-title">Data Analyst</p>
+                        <p class="experience-org">LDS Philanthropies</p>
+                        <p class="experience-location">Provo, UT</p>
+                    </div>
+                    <div class="experience-cell">
+                        <h5 class="experience-time">February 2013 - April 2015</h5>
+                        <p class="experience-title">Full-time Missionary</p>
+                        <p class="experience-org">The Church of Jesus Christ of Latter-Day Saints</p>
+                        <p class="experience-location">Pangasinan, Philippines</p>
+                    </div>
                 </div>
+            </div>
+            <div id="education-container" class="flex-column section center">
                 <div id="education" class="flex-column">
                     <h3>Education</h3>
+                    <h4>Brigham Young University - Provo, UT</h4>
+                    <h5>BS Information Technology</h5>
+                    <h5>Computer Science Minor</h5>
+                    <h5>Cumulative GPA: 3.34</h5>
+                    <ul>
+                        <li>Member - BYU Cybersecurity Student Association</li>
+                        <li>Member - BYU Dev Club</li>
+                        <li>Vice President - BYU IT Student Association</li>
+                    </ul>
                 </div>
             </div>
             <div id="about-container" class="flex-column section center">
