Finish putting content on HTML page

--- a/html-app/index.html
+++ b/html-app/index.html
@@ -21,6 +21,16 @@
                     <h3>I like fun things</h3>
                 </div>
             </div>
+            <div id="about-container" class="flex-column section center">
+                <div id="about" class="flex-column">
+                    <h2>About Me</h2>
+                    <p>Hey, I'm Cody :)</p>
+                    <p>I'm a person who loves to work on coding projects, cultivate artistic skills, and get exposure on as many interesting things as possible.  Naturally, I have a lot of hobbies.  I made this website and some of my other websites to document the things I learn and do so I can share these beautiful experiences with the world.</p>
+                    <p>I like building mobile and web applications, machine learning models, and anything that can help make my life easier.  I love watching movies and TV shows that have deep character writing and gripping premises.  I am a fan of all types of video games and anime, but also love being outside and taking care of my body at the gym.</p>
+                    <p>I love meeting new people, so if you're new to my page and want to connect for any project, please reach out to me!  I'll see you around the interwebs.</p>
+                    <p>Feel free to enjoy my projects listed below.  For more information about my professional and educational background, see the experience/education sections of the webpage.</p>
+                </div>
+            </div>
             <div id="projects-container" class="flex-column section center">
                 <h2>Projects</h2>
                 <div id="projects" class="flex-row wrap center">
@@ -400,21 +410,12 @@
                     </div>
                 </div>
             </div>
-            <div id="about-container" class="flex-column section center">
-                <div id="about" class="flex-column">
-                    <h2>About Me</h2>
-                </div>
-            </div>
-            <div id="contact-container" class="flex-column section center">
-                <div id="contact" class="flex-column">
-                    <h2>Contact</h2>
-                </div>
-            </div>
         </div>
     </div>
     <div id="footer-container" class="flex-column section center">
         <div id="footer" class="flex-column">
-            <h2>Footer</h2>
+            <p><a href="">Facebook</a> <a href="">Instagram</a> <a href="">Twitter</a> <a href="">LinkedIn</a> <a href="">GitHub</a></p>
+            <p>&copy; Cody Uhi 2021</p>
         </div>
     </div>
 </body>
