--- a/html-app/index.html
+++ b/html-app/index.html
@@ -5,30 +5,74 @@
 
 <head>
     <meta charset="utf-8">
+    <!-- Bootstrap Import -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Google Font Import -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!-- Boxicons import -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <!-- JQuery Import -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Local Style Import -->
+    <link rel="stylesheet" href="./style/home-style.css">
+    <!-- Local JS Import -->
+    <script type="text/javascript" src="./js/scripts.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Cody Uhi</title>
-    <link rel="stylesheet" href="./style/home-style.css">
-    <script type="text/javascript" src="./js/scripts.js"></script>
 </head>
 
 <body>
     <div id="content-container" class="flex-column">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="page-navbar">
+            <a href="#intro-container" class="navbar-text">Cody Uhi</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <i class='bx bx-menu-alt-right'></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link navbar-text" href="#about-container">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navbar-text" href="#projects-container">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navbar-text" href="#experience-container">Experience</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navbar-text" href="#education-container">Education</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div id="content" class="flex-column">
             <div id="intro-container" class=" flex-column section center">
                 <div id="intro" class="flex-column center">
                     <h1>Cody Uhi</h1>
                     <h3>Site Reliability Engineer, Full-Stack Software Engineer</h3>
-                    <h3>I like fun things</h3>
                 </div>
             </div>
             <div id="about-container" class="flex-column section center">
                 <div id="about" class="flex-column">
                     <h2>About Me</h2>
                     <p>Hey, I'm Cody :)</p>
-                    <p>I'm a person who loves to work on coding projects, cultivate artistic skills, and get exposure on as many interesting things as possible.  Naturally, I have a lot of hobbies.  I made this website and some of my other websites to document the things I learn and do so I can share these beautiful experiences with the world.</p>
-                    <p>I like building mobile and web applications, machine learning models, and anything that can help make my life easier.  I love watching movies and TV shows that have deep character writing and gripping premises.  I am a fan of all types of video games and anime, but also love being outside and taking care of my body at the gym.</p>
-                    <p>I love meeting new people, so if you're new to my page and want to connect for any project, please reach out to me!  I'll see you around the interwebs.</p>
-                    <p>Feel free to enjoy my projects listed below.  For more information about my professional and educational background, see the experience/education sections of the webpage.</p>
+                    <p>I'm a person who loves to work on coding projects, cultivate artistic skills, and get exposure on
+                        as many interesting things as possible. Naturally, I have a lot of hobbies. I made this website
+                        and some of my other websites to document the things I learn and do so I can share these
+                        beautiful experiences with the world.</p>
+                    <p>I like building mobile and web applications, machine learning models, and anything that can help
+                        make my life easier. I love watching movies and TV shows that have deep character writing and
+                        gripping premises. I am a fan of all types of video games and anime, but also love being outside
+                        and taking care of my body at the gym.</p>
+                    <p>I love meeting new people, so if you're new to my page and want to connect for any project,
+                        please reach out to me! I'll see you around the interwebs.</p>
+                    <p>Feel free to enjoy my projects listed below. For more information about my professional and
+                        educational background, see the experience/education sections of the webpage.</p>
                 </div>
             </div>
             <div id="projects-container" class="flex-column section center">
@@ -414,10 +458,22 @@
     </div>
     <div id="footer-container" class="flex-column section center">
         <div id="footer" class="flex-column">
-            <p><a href="">Facebook</a> <a href="">Instagram</a> <a href="">Twitter</a> <a href="">LinkedIn</a> <a href="">GitHub</a></p>
+            <p><a href="">Facebook</a> <a href="">Instagram</a> <a href="">Twitter</a> <a href="">LinkedIn</a> <a
+                    href="">GitHub</a></p>
             <p>&copy; Cody Uhi 2021</p>
         </div>
     </div>
+
+    <!-- Bootstrap JS Dependencies -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
