--- a/html-app/index.html
+++ b/html-app/index.html
@@ -27,7 +27,7 @@
     <div id="content-container" class="flex-column">
         <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="page-navbar">
             <a href="#intro-container" class="navbar-text">Cody Uhi</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            <button id="collapsible-nav" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class='bx bx-menu-alt-right'></i>
             </button>
@@ -35,16 +35,16 @@
                 <div class="navbar-nav ml-auto">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#about-container">About</a>
+                            <a class="nav-link navbar-text" href="#about-container" onclick="closeNavbar()">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#projects-container">Projects</a>
+                            <a class="nav-link navbar-text" href="#projects-container" onclick="closeNavbar()">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#experience-container">Experience</a>
+                            <a class="nav-link navbar-text" href="#experience-container" onclick="closeNavbar()">Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#education-container">Education</a>
+                            <a class="nav-link navbar-text" href="#education-container" onclick="closeNavbar()">Education</a>
                         </li>
                     </ul>
                 </div>
@@ -57,8 +57,11 @@
                     <h3>Site Reliability Engineer, Full-Stack Software Engineer</h3>
                 </div>
             </div>
-            <div id="about-container" class="flex-column section center">
-                <div id="about" class="flex-column">
+            <div id="about-container" class="section center wrap">
+                <div id="about-pic" class="flex-column center">
+                    <img class="tile-image" src="./img/cody-white.jpeg" alt="Picture of Cody"/>
+                </div>
+                <div id="about" class="flex-column center">
                     <h2>About Me</h2>
                     <p>Hey, I'm Cody :)</p>
                     <p>I'm a person who loves to work on coding projects, cultivate artistic skills, and get exposure on
