Work on the Projects section

--- a/html-app/index.html
+++ b/html-app/index.html
@@ -27,8 +27,9 @@
     <div id="content-container" class="flex-column">
         <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="page-navbar">
             <a href="#intro-container" class="navbar-text">Cody Uhi</a>
-            <button id="collapsible-nav" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button id="collapsible-nav" class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <i class='bx bx-menu-alt-right'></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -38,13 +39,16 @@
                             <a class="nav-link navbar-text" href="#about-container" onclick="closeNavbar()">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#projects-container" onclick="closeNavbar()">Projects</a>
+                            <a class="nav-link navbar-text" href="#projects-container"
+                                onclick="closeNavbar()">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#experience-container" onclick="closeNavbar()">Experience</a>
+                            <a class="nav-link navbar-text" href="#experience-container"
+                                onclick="closeNavbar()">Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-text" href="#education-container" onclick="closeNavbar()">Education</a>
+                            <a class="nav-link navbar-text" href="#education-container"
+                                onclick="closeNavbar()">Education</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +63,7 @@
             </div>
             <div id="about-container" class="section center wrap">
                 <div id="about-pic" class="flex-column center">
-                    <img class="tile-image" src="./img/cody-white.jpeg" alt="Picture of Cody"/>
+                    <img class="tile-image" src="./img/cody-white.jpeg" alt="Picture of Cody" />
                 </div>
                 <div id="about" class="flex-column center">
                     <h2>About Me</h2>
@@ -86,6 +90,7 @@
                             <h4 class="project-name">Online Market</h4>
                             <p class="project-description">A full-stack mobile application for buyers and sellers in an
                                 online market to support sales</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">NodeJS</li>
                                 <li class="tech-item">Express</li>
@@ -99,6 +104,7 @@
                             <h4 class="project-name">Family Map</h4>
                             <p class="project-description">A full-stack mobile application that allows family history
                                 enthusiasts to track significant family history events on Google Maps</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">Java</li>
                                 <li class="tech-item">SQLite</li>
@@ -111,6 +117,7 @@
                         <div class="project-cell">
                             <h4 class="project-name">Blog</h4>
                             <p class="project-description">A full-stack web application that hosts a personal blog</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">NodeJS</li>
                                 <li class="tech-item">Express</li>
@@ -124,6 +131,7 @@
                             <h4 class="project-name">Network Application</h4>
                             <p class="project-description">A full-stack web application that helps professionals track
                                 job applications and recruiter interactions</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">NodeJS</li>
                                 <li class="tech-item">Express</li>
@@ -138,6 +146,7 @@
                             <h4 class="project-name">Game Deals</h4>
                             <p class="project-description">A frontend application that helps gamers find the cheapest
                                 deals on video games across multiple online vendors</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">VueJS</li>
                             </ul>
@@ -148,6 +157,7 @@
                             <h4 class="project-name">Grocery Store</h4>
                             <p class="project-description">A full-stack web application for buyers in an online market
                                 to purchase products</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">NodeJS</li>
                                 <li class="tech-item">Express</li>
@@ -161,6 +171,7 @@
                             <h4 class="project-name">Quality of Life</h4>
                             <p class="project-description">A frontend-only web application that allows users to review
                                 quality-of-life statistics for cities all over the world</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">HTML</li>
                                 <li class="tech-item">CSS</li>
@@ -173,6 +184,7 @@
                             <h4 class="project-name">Weather</h4>
                             <p class="project-description">A frontend-only web application that allows users to see the
                                 weather in cities all over the world</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">HTML</li>
                                 <li class="tech-item">CSS</li>
@@ -185,6 +197,7 @@
                             <h4 class="project-name">Desk Setup</h4>
                             <p class="project-description">A frontend-only website that showcases the work of an
                                 interior designer</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">HTML</li>
                                 <li class="tech-item">CSS</li>
@@ -197,6 +210,7 @@
                             <h4 class="project-name">Tongan Tourism</h4>
                             <p class="project-description">A frontend-only website that reimagines the tourism website
                                 for the Polynesian country of Tonga</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">HTML</li>
                                 <li class="tech-item">CSS</li>
@@ -209,6 +223,7 @@
                             <h4 class="project-name">Uhi Photo Spot</h4>
                             <p class="project-description">A frontend-only website that showcases a photography
                                 portfolio</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">HTML</li>
                                 <li class="tech-item">CSS</li>
@@ -221,6 +236,7 @@
                             <h4 class="project-name">Pokedex</h4>
                             <p class="project-description">A frontend-only mobile application that allows players of the
                                 Pokemon franchise to view Pokemon stats and track capture progress</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">Java</li>
                                 <li class="tech-item">Android</li>
@@ -232,6 +248,7 @@
                             <h4 class="project-name">Detect Deepfake</h4>
                             <p class="project-description">A machine-learning model that determines whether a given
                                 image is a deepfake image or an authentic image (97.5% Accuracy)</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">Python3</li>
                                 <li class="tech-item">Tensorflow</li>
@@ -243,6 +260,7 @@
                             <h4 class="project-name">Dungeons & Dragons</h4>
                             <p class="project-description">A frontend-only mobile application that allows Dungeons &
                                 Dragons players to retrieve random dice roll numbers</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">Java</li>
                                 <li class="tech-item">Android</li>
@@ -255,6 +273,7 @@
                             <p class="project-description">A frontend-only mobile application that allows users to scan
                                 text with their mobile device's camera and automatically look up locations/URLs in a map
                                 application or browser</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">Java</li>
                                 <li class="tech-item">Android</li>
@@ -267,6 +286,7 @@
                             <h4 class="project-name">Eureka Trails</h4>
                             <p class="project-description">A full-stack mobile application that gamifies walking
                                 distance to incentivize physical activity (Sponsored by BYU)</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">Java</li>
                                 <li class="tech-item">MySQL</li>
@@ -282,6 +302,7 @@
                             <h4 class="project-name">Kashti 2.0</h4>
                             <p class="project-description">An event-driven scripting platform dashboard for Kubernetes
                                 (Sponsored by Microsoft)</p>
+                            <hr>
                             <ul class="tech-list">
                                 <li class="tech-item">GoLang</li>
                                 <li class="tech-item">TypeScript</li>
