--- a/html-app/index.html
+++ b/html-app/index.html
@@ -15,6 +15,8 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- JQuery Import -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Font Awesome Import -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Local Style Import -->
     <link rel="stylesheet" href="./style/home-style.css">
     <!-- Local JS Import -->
@@ -482,9 +484,11 @@
     </div>
     <div id="footer-container" class="flex-column section center">
         <div id="footer" class="flex-column">
-            <p><a href="">Facebook</a> <a href="">Instagram</a> <a href="">Twitter</a> <a href="">LinkedIn</a> <a
-                    href="">GitHub</a></p>
-            <p>&copy; Cody Uhi 2021</p>
+            <div id="footer-links" class="flex-row"><a href="" class="link-text"><i class="fa fa-facebook"></i></a> <a href=""
+                    class="link-text"><i class="fa fa-instagram"></i></a> <a href="" class="link-text"><i
+                        class="fa fa-twitter"></i></a> <a href="" class="link-text"><i class="fa fa-linkedin"></i></a>
+                <a href="" class="link-text"><i class="fa fa-github"></i></a></div>
+            <p id="copyright">&copy; Cody Uhi 2021</p>
         </div>
     </div>
 
